# media-data-platform

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: real_api_settings.example.yaml  settings.example.yaml
dags/: README.md  google_ads_ingestion.py  hello_airflow.py  marketing_data_platform.py  meta_ads_ingestion.py
data/samples/: google_ads_campaign_daily.json  meta_ads_campaign_daily.json
dbt/mdp/: .gitignore  README.md  dbt_project.yml  package-lock.yml  profiles.yml
docs/: PARTIES_6_7_COMPLETION_REPORT.md  architecture.md  data_model.md  kpi_reference.md  setup_bigquery.md  verify_bigquery.md
docs/dags/: marketing_data_platform.md
docs/intern_notes/: BIGQUERY_CONSOLE_FR.md  BIGQUERY_SETUP.md  VERIFY_BIGQUERY.md  partie_10_implementation.md  partie_5_summary.txt  partie_8_implementation.md  partie_9_implementation.md  partie_9_run_summary.md  partie_9_tests_dbt.md  partie_9_volume_checks.md  parties_6_7_summary.txt  project_partie_0.md  project_steps.md  projet_partie_1.md  projet_partie_2.md  projet_partie_3.md  projet_partie_5.md  projet_partie_6_7.md  rapport_parties_6_7.md  test_bigquery_integration.md
scripts/: create_run_summary_table.sh  deduplicate_raw.py  diagnose_bigquery.sh  ingest_meta_ads.py  run_dbt.sh  run_pipeline.sh  setup_bigquery.sh  test_bigquery.py  test_bigquery_integration.sh  validate_dags.py  verify_bigquery.sh
scripts/debug/: README.md  diagnose_bigquery.sh  verify_bigquery.sh
src/fake_apis/: __init__.py  (+2 more)
(+28 files in other folders)
